--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,12 @@
 
 nav {
     border-bottom: 1px solid rgba(0,0,0,0.1);
+    background-color: white;
     position: sticky;
+    top: 0;
     display: flex;
     justify-content: space-between;
-    align-items: center;      
+    align-items: center;     
 }
 
 #nyt-logo {
