add title and main satellite img

--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@ nav {
 .btn {
     visibility: visible;
     text-size-adjust: 100%;
-    margin: 0;
+    margin-left: 5px;
     border-radius: 3px;
     cursor: pointer;
     font-family: nyt-franklin, helvetica, arial, sans-serif;
@@ -74,6 +74,28 @@ nav {
     letter-spacing: 0.05em;
     text-transform: uppercase;
     padding: 11px 12px 8px;
+}
+
+h1 {
+    font-family: georgia,'times new roman',times,serif;
+    font-weight: 700;
+    line-height: 3rem;
+    font-size: 2rem;
+    margin-top: 40px;
+    margin-bottom: 20px;
+    border: 1px solid black;
+}
+
+
+#main-content {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    border: 1px solid black;
+}
+
+#satellite-img {
+    width: 1024px;
 }
 
 
