--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ nav {
     margin-left: 5px;
     border-radius: 3px;
     cursor: pointer;
-    font-family: nyt-franklin, helvetica, arial, sans-serif;
+    font-family: helvetica, arial, sans-serif;
     transition: all 0.6s ease 0s;
     white-space: nowrap;
     vertical-align: middle;
@@ -83,19 +83,30 @@ h1 {
     font-size: 2rem;
     margin-top: 40px;
     margin-bottom: 20px;
-    border: 1px solid black;
 }
 
 
-#main-content {
+#title-content {
     display: flex;
     align-items: center;
     flex-direction: column;
-    border: 1px solid black;
 }
 
-#satellite-img {
-    width: 1024px;
+.satellite-img {
+    width: 1200px;
+}
+
+.info {
+    margin-top: 10px;
+    color: #667;
+    font-family: georgia,'times new roman',times,serif;
+    font-size: 0.9375rem;
+    line-height: 1.25rem;
+}
+
+#img-credit {
+    font-family: inherit;
+    font-size: 13px;
 }
 
 
