--- a/styles.css
+++ b/styles.css
@@ -109,10 +109,12 @@ h1 {
     font-size: 13px;
 }
 
-#main-content {
+.main-content {
     margin: auto;
     margin-top: 25px;
     width: 600px;
+    font-size: 20px;
+    line-height: 1.875rem;
 }
 
 #date {
@@ -123,7 +125,6 @@ h1 {
 }
 
 p {
-    font-size: 1.25rem;
     line-height: 1.875rem;
 }
 
@@ -145,6 +146,7 @@ p {
     height:576px;
     width:945px;
 }
+
 
 #universe,
 #time,
@@ -168,9 +170,50 @@ p {
     font-size: 20px;
 }
 
-#inflation-img {
-
+#container-footer {
+    height: 1px;
+    font-size: 14px;
 }
+
+.small-hr {
+    border: 1px solid black;
+    width: 8%;
+    margin-bottom: 15px;
+}
+
+.media-info {
+    font-size: 15px;
+    color: grey;
+    line-height: 1.3;
+}
+
+#nyt-satellite-two {
+    width: 720px;
+}
+
+#read-comments-btn {
+    text-size-adjust: 100%;
+    vertical-align: middle;
+    margin: 0;
+    cursor: pointer;
+    background-color: rgb(86, 123, 149);
+    border: 1px solid rgb(50, 104, 145);
+    border-radius: 3px;
+    color: white;
+    display: block;
+    font-family: nyt-franklin, helvetica, arial, sans-serif;
+    font-size: 0.8125rem;
+    font-weight: 600;
+    letter-spacing: 0.05em;
+    line-height: 1.5rem;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 5px 0px;
+    text-transform: uppercase;
+    transition: background-color 0.6s ease 0s;
+    width: 50%;
+}
+
 /* @media all and (max-width: 480px) {
     .mydiv { display: none; }
   } */
